fixed vertical alignment for table cells in puff editor

--- a/web-app/css/admin.css
+++ b/web-app/css/admin.css
@@ -276,6 +276,7 @@ ul {
 
 #puffs td[colspan] {
 	border: none;
+	vertical-align:top;
 }
 
 #puffs tr:nth-child(4n+2), #puffs tr:nth-child(4n+3) {
